# sim_robot_mqtt

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  FRONTEND_ARCHITECTURE.md  HTTP_IMPLEMENTATION.md  HTTP_SERVER_SETUP.md  QUICK_START.md  README.md
doc/: ARCHITECTURE.txt  FRONTEND_ARCHITECTURE.md  HTTP_IMPLEMENTATION.md  HTTP_SERVER_SETUP.md  OPENAPI.yaml  QUICK_START.md  uplink_template.json
firmware/: .gitkeep
include/: config_db.h  http_server.h  mqtt_callback.h  mqtt_manager.h  protocol.h  robot.h  version.h
src/: config_db.cpp  http_server.cpp  main.cpp  mqtt_callback.cpp  mqtt_manager.cpp  mqtt_manager.h  protocol.cpp  robot.cpp  robot.h
web/: app.js  index.html  style.css  variables.css
web/css/: base.css  components.css  layout.css  pages.css  tables.css  utils.css
web/html/: index.html
web/js/: README.md  api.js  app.js  commands.js  config.js  pagination.js  robot-operations.js  ui.js
